--- a/VCS/AEON/New Group/Cell/membercard/MemberCardInfoTableViewCell.xib
+++ b/VCS/AEON/New Group/Cell/membercard/MemberCardInfoTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,21 +15,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="261" id="KGk-i7-Jjw" customClass="MemberCardInfoTableViewCell" customModule="AEONVCS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="332" height="260"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="438" id="KGk-i7-Jjw" customClass="MemberCardInfoTableViewCell" customModule="AEONMember" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="571" height="437"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="332" height="260"/>
+                <rect key="frame" x="0.0" y="0.0" width="571" height="437"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sGU-pn-90L">
-                        <rect key="frame" x="0.0" y="0.0" width="332" height="260"/>
+                        <rect key="frame" x="0.0" y="0.0" width="571" height="437"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jui-lk-vzw">
-                                <rect key="frame" x="0.0" y="0.0" width="332" height="260"/>
+                                <rect key="frame" x="0.0" y="0.0" width="571" height="437"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qr-code-icon" translatesAutoresizingMaskIntoConstraints="NO" id="vWD-d1-1r5">
-                                <rect key="frame" x="86" y="8" width="160" height="160"/>
+                                <rect key="frame" x="205.5" y="8" width="160" height="160"/>
                                 <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="160" id="g4t-0Q-vgk"/>
@@ -43,7 +43,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="400000 ks 6 months" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QsL-uz-eWq">
-                                <rect key="frame" x="73.5" y="205.5" width="185.5" height="38.5"/>
+                                <rect key="frame" x="193" y="205.5" width="185.5" height="215.5"/>
                                 <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="22"/>
                                 <color key="textColor" red="0.71764705880000002" green="0.0" blue="0.50588235290000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
@@ -55,8 +55,8 @@
                                     <constraint firstAttribute="width" secondItem="d8o-Wa-t01" secondAttribute="height" multiplier="32:31" id="qXR-M1-Ufe"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZC6-rn-ULu">
-                                <rect key="frame" x="30" y="172" width="273" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZC6-rn-ULu">
+                                <rect key="frame" x="30" y="172" width="512" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="VxQ-c9-Fn9"/>
                                 </constraints>
@@ -65,14 +65,14 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aLS-l2-nmv">
-                                <rect key="frame" x="0.0" y="258" width="332" height="2"/>
+                                <rect key="frame" x="0.0" y="435" width="571" height="2"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="2" id="aqu-3b-ZvO"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aa2-7D-n2M">
-                                <rect key="frame" x="73.5" y="216" width="185.5" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aa2-7D-n2M">
+                                <rect key="frame" x="193" y="216" width="185.5" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="1Ae-f0-5TC"/>
                                 </constraints>
@@ -81,8 +81,8 @@
                                     <action selector="tappedOnAgreementNumber:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="x1I-yu-bfs"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="htb-ge-CHl">
-                                <rect key="frame" x="86" y="8" width="160" height="160"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="htb-ge-CHl">
+                                <rect key="frame" x="205.5" y="8" width="160" height="160"/>
                                 <connections>
                                     <action selector="tappedOnQRcode:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="eTf-Bo-K7h"/>
                                 </connections>
@@ -138,7 +138,7 @@
                 <outlet property="lblFinancialData" destination="QsL-uz-eWq" id="Xx7-xS-fEE"/>
                 <outlet property="qrHeight" destination="uir-Aw-XeL" id="PmR-Jq-FrK"/>
             </connections>
-            <point key="canvasLocation" x="-40" y="116.94152923538232"/>
+            <point key="canvasLocation" x="104.8" y="156.97151424287858"/>
         </tableViewCell>
     </objects>
     <resources>
