--- a/VCS/AEON/New Group/Cell/messaging_cell/chatbot_button_cell/ChatBotTableViewCell.xib
+++ b/VCS/AEON/New Group/Cell/messaging_cell/chatbot_button_cell/ChatBotTableViewCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,29 +18,84 @@
                 <rect key="frame" x="0.0" y="0.0" width="350" height="158"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="XM0-Mv-6Ox">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WfU-QT-3Oj">
                         <rect key="frame" x="5" y="5" width="340" height="148"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bk5-jC-RLU">
-                            <size key="itemSize" width="128" height="128"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                    </collectionView>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="XM0-Mv-6Ox">
+                                <rect key="frame" x="0.0" y="0.0" width="340" height="138"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bk5-jC-RLU">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                            </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TH1-cB-qdu">
+                                <rect key="frame" x="230" y="116" width="100" height="22"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="forward" translatesAutoresizingMaskIntoConstraints="NO" id="VKU-3a-gYV">
+                                        <rect key="frame" x="80" y="1" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="0rv-93-mdu"/>
+                                            <constraint firstAttribute="width" constant="20" id="hHd-Sm-kX2"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Readmore" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dta-9z-4Bn">
+                                        <rect key="frame" x="5" y="2" width="75" height="18"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <color key="textColor" red="0.52704799179999995" green="0.0" blue="0.5284058452" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="dta-9z-4Bn" firstAttribute="centerY" secondItem="VKU-3a-gYV" secondAttribute="centerY" id="7H2-Mg-E9S"/>
+                                    <constraint firstAttribute="height" constant="22" id="Mdr-LG-Tq4"/>
+                                    <constraint firstAttribute="width" constant="100" id="PfD-i8-5WN"/>
+                                    <constraint firstItem="VKU-3a-gYV" firstAttribute="leading" secondItem="dta-9z-4Bn" secondAttribute="trailing" id="c1Y-QJ-o5e"/>
+                                    <constraint firstAttribute="trailing" secondItem="VKU-3a-gYV" secondAttribute="trailing" id="fRf-4o-Ybi"/>
+                                    <constraint firstItem="VKU-3a-gYV" firstAttribute="centerY" secondItem="TH1-cB-qdu" secondAttribute="centerY" id="w4W-w9-uH9"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="XM0-Mv-6Ox" secondAttribute="bottom" constant="10" id="8EQ-ur-QC0"/>
+                            <constraint firstAttribute="trailing" secondItem="XM0-Mv-6Ox" secondAttribute="trailing" id="GUs-OH-cKa"/>
+                            <constraint firstAttribute="trailing" secondItem="TH1-cB-qdu" secondAttribute="trailing" constant="10" id="Tmj-j2-pPO"/>
+                            <constraint firstItem="XM0-Mv-6Ox" firstAttribute="leading" secondItem="WfU-QT-3Oj" secondAttribute="leading" id="fOo-xO-rC0"/>
+                            <constraint firstAttribute="bottom" secondItem="TH1-cB-qdu" secondAttribute="bottom" constant="10" id="ush-j6-GcC"/>
+                            <constraint firstItem="XM0-Mv-6Ox" firstAttribute="top" secondItem="WfU-QT-3Oj" secondAttribute="top" id="vG4-yQ-beT"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="XM0-Mv-6Ox" secondAttribute="bottom" constant="5" id="Owb-xO-iRq"/>
-                    <constraint firstItem="XM0-Mv-6Ox" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="dmD-Q8-M0h"/>
-                    <constraint firstAttribute="trailing" secondItem="XM0-Mv-6Ox" secondAttribute="trailing" constant="5" id="iI9-v2-4PA"/>
-                    <constraint firstItem="XM0-Mv-6Ox" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="tFD-QA-s3j"/>
+                    <constraint firstItem="WfU-QT-3Oj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="5Yf-r6-9ni"/>
+                    <constraint firstAttribute="trailing" secondItem="WfU-QT-3Oj" secondAttribute="trailing" constant="5" id="cqE-LR-LZk"/>
+                    <constraint firstAttribute="bottom" secondItem="WfU-QT-3Oj" secondAttribute="bottom" constant="5" id="lZu-gK-aKn"/>
+                    <constraint firstItem="WfU-QT-3Oj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="ndj-9h-Xxb"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="chatCollectionView" destination="XM0-Mv-6Ox" id="4Qt-EE-9ts"/>
+                <outlet property="readmoreLabel" destination="dta-9z-4Bn" id="QaC-Ow-Jwq"/>
+                <outlet property="readmoreView" destination="TH1-cB-qdu" id="GAq-Xv-F3s"/>
+                <outlet property="viewsBorder" destination="WfU-QT-3Oj" id="omc-qM-G0h"/>
             </connections>
-            <point key="canvasLocation" x="159.42028985507247" y="137.94642857142856"/>
+            <point key="canvasLocation" x="159.42028985507247" y="136.60714285714286"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="forward" width="25" height="25"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
