--- a/VCS/AEON/New Group/Cell/messaging_cell/chatbot_button_cell/chatBotCollectionViewCell.xib
+++ b/VCS/AEON/New Group/Cell/messaging_cell/chatbot_button_cell/chatBotCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -21,16 +21,13 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h62-2K-1fd" customClass="CardView" customModule="AEONMember" customModuleProvider="target">
                         <rect key="frame" x="10" y="5" width="404" height="290"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vjA-5K-u4o">
-                                <rect key="frame" x="10" y="5" width="384" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="gS7-ME-Xmr"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vjA-5K-u4o">
+                                <rect key="frame" x="10" y="10" width="384" height="17"/>
                                 <attributedString key="attributedText">
                                     <fragment content="hi">
                                         <attributes>
                                             <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" metaFont="system" size="12"/>
+                                            <font key="NSFont" metaFont="system" size="15"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="truncatingTail" baseWritingDirection="natural" lineSpacing="5" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
@@ -68,8 +65,9 @@
                             <constraint firstAttribute="bottom" secondItem="UWO-40-dT1" secondAttribute="bottom" constant="10" id="Pf6-cW-aLV"/>
                             <constraint firstAttribute="trailing" secondItem="vjA-5K-u4o" secondAttribute="trailing" constant="10" id="SrM-qu-yGr"/>
                             <constraint firstItem="UWO-40-dT1" firstAttribute="leading" secondItem="h62-2K-1fd" secondAttribute="leading" constant="10" id="X2A-LD-XnD"/>
-                            <constraint firstItem="vjA-5K-u4o" firstAttribute="top" secondItem="h62-2K-1fd" secondAttribute="top" constant="5" id="chk-Ce-HLS"/>
+                            <constraint firstItem="vjA-5K-u4o" firstAttribute="top" secondItem="h62-2K-1fd" secondAttribute="top" constant="10" id="chk-Ce-HLS"/>
                             <constraint firstItem="vjA-5K-u4o" firstAttribute="leading" secondItem="h62-2K-1fd" secondAttribute="leading" constant="10" id="fcP-cC-2a2"/>
+                            <constraint firstItem="UWO-40-dT1" firstAttribute="top" relation="greaterThanOrEqual" secondItem="vjA-5K-u4o" secondAttribute="bottom" constant="10" id="qcD-ar-o9t"/>
                             <constraint firstAttribute="trailing" secondItem="UWO-40-dT1" secondAttribute="trailing" constant="10" id="tvm-No-d9s"/>
                         </constraints>
                     </view>
